--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     values-round/strings.xml for round devices.
     -->
   <string name="hello_world">Hello Square World!</string>
+  <string name="login_fail_message">Login Failed</string>
 </resources>
