Finished google sign OUT

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     -->
   <string name="hello_world">Hello Square World!</string>
   <string name="login_fail_message">Login Failed</string>
+  <string name="sign_out">Sign Out</string>
 </resources>
