--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
   <string name="hello_world">Hello Square World!</string>
   <string name="login_fail_message">Login Failed</string>
   <string name="sign_out">Sign Out</string>
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
