--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
   <string name="sign_out">Sign Out</string>
 
   <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="create_dialog_title">Upload Properties</string>
+  <string name="pick_image">Choose Image to Uplaod</string>
+  <string name="title_of_image_hint">Title of Image</string>
+  <string name="description_of_image_hint">Description of Image</string>
 </resources>
