--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="action_settings">Settings</string>
 
   <string name="gallery_fragment_label">Gallery Fragment</string>
-  <string name="second_fragment_label">Second Fragment</string>
+  <string name="image_fragment_label">Image Fragment</string>
   <string name="next">Next</string>
   <string name="previous">Previous</string>
 
