working on showing images in the recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
   <string name="gallery_title">Title</string>
   <string name="image_description">Image Description</string>
   <string name="image_title">Image Title</string>
+  <string name="gallery_hint">Gallery</string>
 </resources>
